# ai-stock-predicter

./: .gitignore  Cargo.toml  main.rs
front-end/: package.json  settings.json
front-end/my-app/: package-lock.json
front-end/my-app/src/: App.jsx  index.css
front-end/my-app/src/components/: SearchBar.jsx
server/: Cargo.toml
server/src/: handler.rs  main.rs
