[package]
name = "stock_market_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
axum = "0.7" # Web framework
tokio = { version = "1", features = ["full"] } # Async runtime
reqwest = { version = "0.11", features = ["json"] } # HTTP requests
hyper = { version = "1", features = ["full"] } # HTTP implementation
tower-http = { version = "0.5", features = ["fs"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] } # Database
tch = "0.11" # PyTorch bindings for AI
serde = { version = "1", features = ["derive"] } # JSON serialization
serde_json = "1.0"
alpha_vantage = "0.11.0"
dotenv = "0.15"

[[bin]]
name = "stock_market_analysis"
path = "src/main.rs"
